fixed issue with twitch subs not showing, if a dgg sub was active. fixed pagination GUI in users admin sections. fixed breadcrumb GUI in admin sections.

--- a/assets/web/css/style.scss
+++ b/assets/web/css/style.scss
@@ -168,7 +168,7 @@ form.form-alt {
   text-overflow: ellipsis;
 }
 
-.breadcrumb>li+li:before {
+.breadcrumb-item+.breadcrumb-item::before {
   content: "|\00a0";
   padding: 0 5px;
   color: $text-color3;
